--- a/webserver-playbook.yaml
+++ b/webserver-playbook.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Install and start Apache HTTPD
-  hosts: ansi-node1
+  hosts: eoc-ansible-node1
   become: yes
   tasks:
     - name: httpd package is present
