--- a/intranet.yaml
+++ b/intranet.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Enable intranet services
-  hosts: ansi-node1
+  hosts: eoc-ansible-node1
   become: yes
   tasks:
         - name: latest version of httpd and firewalld installed
@@ -40,6 +40,6 @@
   tasks:
         - name: connect to intranet web server
           uri:
-            url: http://ansi-node1.example.com
+            url: http://eoc-ansible-node1
             return_content: yes
             status_code: 200
