--- a/failure1.yaml
+++ b/failure1.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Task Failure lab
-  hosts: ansi-node1
+  hosts: eoc-ansible-node1
   vars:
     web_package: http
     db_package: mariadb-server
